--- a/read-more.html
+++ b/read-more.html
@@ -26,22 +26,22 @@
 
     <!-- Article Section (Left - spans 2 columns) -->
     <div class="lg:col-span-2">
-      <img src="https://source.unsplash.com/random/900x400" alt="Article Image" class="w-full h-64 object-cover rounded-lg mb-6">
+      <img src="https://i.pinimg.com/736x/78/eb/9c/78eb9c26612a01a9a8ea3bef0e12eca7.jpg" alt="Article Image" class="w-full h-64 object-cover rounded-lg mb-6">
     
     <h2 class="text-3xl font-bold text-indigo-700 mb-4">Autobiography</h2>
     <p class="text-sm text-gray-500 mb-4">Published on April 22, 2025 · by Nicholai Thomas</p>
 
     <article class="space-y-6 text-gray-700 leading-relaxed">
       <h3 class="text-md font-bold">Finding My Flow: A Journey Through Learning Styles</h3>
-      <p>When I first started high school, I had no idea what a “learning style” even meant. I figured everyone just read their textbooks, memorized facts, and hoped they remembered enough to pass the test. That’s how middle school had worked for me, and I didn’t question it. But by the end of freshman year, I realized something had to change.</p>
-      <p>Biology class hit me like a truck. I’d stare at the textbook for hours, trying to memorize the diagrams and vocabulary, but come test day, my mind would go blank. Meanwhile, my best friend Alyssa barely studied and always got A’s. I was frustrated, confused, and honestly a little embarrassed.</p>
-      <p>One day after a rough quiz grade, I asked Alyssa how she studied.</p>
-      <p>“I draw everything out,” she said. “Mind maps, sketches, colors. I have to see it all laid out, like a picture in my head.”</p>
-      <p>That blew my mind. I’d been reading straight from the textbook, line after line, with no color, no sketches, no connection. That night, I tried her method. I drew out the cell structure with different colored pens and arrows showing how everything worked together. It wasn’t perfect, but something clicked.</p>
-      <p>By the time finals came, I had notebooks full of diagrams, color-coded study guides, and even little comic strips of processes like mitosis. I didn’t just pass—I aced the exam.</p>
-      <p>That’s when I realized I’m a visual learner.</p>
-      <p>Over the next few years, I refined that discovery. In sophomore year, world history became one of my favorite classes because I could turn historical timelines into infographics and maps. I even made my own flashcards with doodles and symbols to help me remember events. In chemistry, I used colorful cheat sheets and created visual analogies for chemical bonds (like friendships and breakups—high school drama helped me remember).</p>
-      <p>Junior year, I had to tackle more abstract stuff, like algebra and literature analysis. Visual learning didn’t always come easy here, but I adapted. For math, I used graph paper and drew out problems, turning word problems into diagrams. For English, I highlighted my books in different colors—yellow for main ideas, pink for figurative language, green for symbolism. My essays improved when I mapped them out visually before writing.</p>
+      <p>When I first started high school, I had no idea what a “learning style” even meant. I figured everyone just read their textbooks, memorized facts, and hoped they remembered enough to pass the test. That’s how school had worked for me, and I didn’t question it. But by the end of first year, I realized something had to change.</p>
+      <p>Mathematics definately hit me like a truck. I’d stare at the problems for hours, trying to memorize the formulas and diagrams, but come test day, my mind would go blank. Meanwhile, I had friends, family members, family friends who were exceptionally gifted on the subject matter. I was frustrated, confused, and honestly a little embarrassed.</p>
+      <p>One day after a rough quiz grade or tri-weeklys as they were called, I had to re-evaluate how I went about understanding the subject.</p>
+      <p>“I tend to learn by just jumping in and figuring it out as I go along, which is convinient for the subject because u figure out what you don't know by using what you already know. "I found nothing works better than the motivation of not being a failure. Unfortunately didn't always work.”</p>
+      <p>I emphasize on this subject because it's especially a thorne in my existence. Closing out high school I had external examination csec/cxc, during the covid and "isolation period" of 2020 and 2021 my study habit's and motivation to learn had taken a nose dive but by the time we were closing into finals I had a handle on all subjects except mathematics.Honestly the peepble in my shoe that just wouldn't go away.</p>
+      <p>By the time finals came, I had papers upon papers of past papers that i had done and was ready as i'd ever be for these exams, in all honesty it was a bleak time for me and I was quite sure I would amount to nothing in these exams. Lo an behold I did pass I didnt ace any of my 5 subjects but was by no means a fauilure including mathematics which I was very happy to get a 3.</p>
+      <p>All this to say I never believed in learning habits or styles but intrinsic motivation was my biggest factor in recalling anything I had done in the months leading up to thos examinations.</p>
+      <p>Over the next few years, I refined that discovery. In first year of utech year,the experince was rather dieffrent I was actually studying a subject I quite like it did however sometimes need a physicall rather kinysthetic approach.</p>
+      <p>Eventually, I had to tackle more abstract stuff, like algebra and academic literature. kinisthetic learning didn’t always come easy here, but I adapted. For math, it's still a work in progress. For English, I had to right an essay it wwas a combination of all learning styles thaat really helped me see it through, I was able to recall everything I learned wether by reading hearing or personal practice and use into my own paper.</p>
       <p>By senior year, I was confident. I knew that for me to learn something, I had to see it. And not just once. I had to break it down, lay it out visually, and color-code it so it made sense. I even started helping my classmates find their own learning styles. One of them realized they were an auditory learner and started recording lectures. Another discovered she learned best through teaching others.</p>
       <p>College was a whole new level. I went in thinking I had it all figured out. I was ready with my colored pens and highlighters, prepared to conquer every class visually. And at first, it worked. In my psychology class, I drew out the brain and labeled the parts with functions and examples. In statistics, I used graphs and charts to break down data.</p>
       <p>Then came philosophy.</p>
@@ -63,7 +63,7 @@
         <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fwww.glenmuirhighschool.edu.jm%2Fimages%2Findex_images%2Fcrest.png&sp=1745368074Tdd4a328d4867db752756937aab02c9fcc2d493d989b258b5daf44cc18f0e27da" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 1">
         <img src="https://i.pinimg.com/736x/58/a4/df/58a4df93aa0b4520cd4e73f71b15f3b6.jpg" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 2">
         <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fglenmuirhspsa.com%2Fwp-content%2Fuploads%2F2018%2F06%2Fsign.jpg&sp=1745371486Te54e55ad7f391d3c5759288a64237963c06e6da93f5118a57793eb3f881a875b" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 3">
-        <img src="https://source.unsplash.com/random/300x200?4" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 4">
+        <img src="https://i.pinimg.com/736x/a6/ab/b8/a6abb8a75928bc3f9af5f4ba6c5f17b6.jpg" class="rounded-lg shadow-sm hover:shadow-md transition" alt="Gallery Image 4">
       </div>
     </div>
 
@@ -81,7 +81,7 @@
     <h3 class="text-xl font-semibold mb-6 text-indigo-700">Related Posts</h3>
     <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
       <article class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-lg transition transform hover:scale-105">
-        <img src="https://source.unsplash.com/random/401x200" alt="" class="w-full h-40 object-cover">
+        <img src="https://i.pinimg.com/236x/da/cd/27/dacd27c8556cf0af4cfd24e9001719d5.jpg" alt="" class="w-full h-40 object-cover">
         <div class="p-4">
           <h4 class="font-semibold text-lg text-indigo-700 mb-2">Another Post</h4>
           <p class="text-sm text-gray-600">Quick preview of another related article you might find interesting.</p>
