--- a/read-more.html
+++ b/read-more.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-100 text-gray-800 font-sans transition-colors duration-500">
 
   <!-- Header -->
-  <header class="bg-white shadow-md">
+  <header class="shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-6 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-indigo-600">My Blog</h1>
       <nav class="space-x-4">
@@ -92,7 +92,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-white mt-10 py-6 border-t">
+  <footer class="mt-10 py-6 border-t">
     <div class="max-w-7xl mx-auto px-4 text-center text-gray-500">
       &copy; 2025 My Blog. All rights reserved.
     </div>
