--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
       <img src="https://i.pinimg.com/736x/b7/54/c3/b754c3fc8a745821b9a5590fda492d64.jpg" alt="Blog image" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-semibold mb-2 text-indigo-700 transition-colors duration-200 hover:text-indigo-900">My Digital Story</h2>
-        <p class="text-gray-600 mb-4">A short description of the blog post goes here to entice users to read more.</p>
+        <p class="text-gray-600 mb-4">Finding My Flow: A Journey Through Learning Styles.</p>
         <a href="read-more.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
       </div>
     </article>
