--- a/blog.html
+++ b/blog.html
@@ -55,6 +55,15 @@
     </article>
 
     <!-- More blog cards as needed... -->
+    <!-- Blog Card -->
+    <article class="bg-white shadow-md rounded-lg overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
+      <img src="https://i.pinimg.com/736x/b7/54/c3/b754c3fc8a745821b9a5590fda492d64.jpg" alt="Blog image" class="w-full h-48 object-cover">
+      <div class="p-6">
+        <h2 class="text-xl font-semibold mb-2 text-indigo-700 transition-colors duration-200 hover:text-indigo-900">University Policies</h2>
+        <p class="text-gray-600 mb-4">University's Integrity in Research Policies.</p>
+        <a href="read-more.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
+      </div>
+    </article>
   </main>
 
   <!-- Pagination -->
