--- a/about.html
+++ b/about.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="jjjjj.css">
-    <title>Nicholai Thomas - Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>University Research Integrity Poster</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body>
-    <header>
-        <nav class="navbar">
-            <div class="container">
-                <h1><a href="jjjjj.html">Nicholai Thomas</h1>
-                <p>Web Developer</p>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-     <!-- Inside the about-me section -->
-<section class="about-me">
-    <div class="container">
-        <h2>About Me</h2>
-        <div class="about-content">
-            <img src="https://i.pinimg.com/564x/9e/30/40/9e3040c29946239e2a8df6178f2457f7.jpg" alt="Your Portfolio Image">
-            <p>Welcome to my portfolio! I am a passionate web developer with expertise in...</p>
-            <!-- Add more details about yourself here -->
-        </div>
+<body class="bg-gray-100 text-gray-800 font-sans">
+  <div class="max-w-4xl mx-auto p-8 bg-white shadow-xl rounded-lg mt-10 border border-gray-300">
+    <div class="text-center mb-8">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Academic_Cap.svg" alt="University Logo" class="h-16 mx-auto mb-4">
+      <h1 class="text-4xl font-bold text-blue-800">Crestmont University</h1>
+      <p class="text-xl text-gray-700 mt-2">Integrity in Research Policy</p>
     </div>
-</section>
 
-<footer>
-    <div class="container">
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+    <div class="space-y-6">
+      <section>
+        <h2 class="text-2xl font-semibold text-blue-700 border-b-2 border-blue-200 pb-1">Our Core Values</h2>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+          <li><strong>Honesty:</strong> Report data and methods truthfully.</li>
+          <li><strong>Accountability:</strong> Own your research and its impact.</li>
+          <li><strong>Respect:</strong> Credit the contributions of others.</li>
+          <li><strong>Fairness:</strong> Review and collaborate without bias.</li>
+          <li><strong>Compliance:</strong> Follow institutional and ethical guidelines.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="text-2xl font-semibold text-red-700 border-b-2 border-red-200 pb-1">Research Violations</h2>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+          <li><strong>Fabrication:</strong> Making up data or results.</li>
+          <li><strong>Falsification:</strong> Manipulating research materials or processes.</li>
+          <li><strong>Plagiarism:</strong> Using another’s work without proper credit.</li>
+          <li><strong>Misrepresentation:</strong> Distorting research outcomes or credentials.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="text-2xl font-semibold text-green-700 border-b-2 border-green-200 pb-1">Our Commitment</h2>
+        <p class="mt-2 text-gray-700">
+          Crestmont University fosters a culture of ethical research by providing:
+        </p>
+        <ul class="list-disc list-inside text-gray-700">
+          <li>Training & education in responsible conduct of research</li>
+          <li>Fair investigation of reported misconduct</li>
+          <li>Resources for research ethics and integrity</li>
+        </ul>
+      </section>
     </div>
-</footer>
 
-<!-- Add this at the end of the body section, before the script tag -->
-<div id="project-modal" class="modal">
-<div class="modal-content" id="modal-content">
-    <span id="close-modal" class="close">&times;</span>
-</div>
-</div>
-
-
-<script src="jjjjj.js"></script>
+    <footer class="mt-10 text-center text-sm text-gray-500 border-t pt-4">
+      🔹 Integrity Builds Trust. Trust Powers Discovery. 🔹<br>
+      Visit: <a href="#" class="text-blue-600 underline">www.crestmont.edu/research-integrity</a> |
+      Contact: <a href="mailto:research.ethics@crestmont.edu" class="underline">research.ethics@crestmont.edu</a>
+    </footer>
+  </div>
 </body>
 </html>
