--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
       <div class="p-6">
         <h2 class="text-xl font-semibold mb-2 text-indigo-700 transition-colors duration-200 hover:text-indigo-900">University Policies</h2>
         <p class="text-gray-600 mb-4">University's Integrity in Research Policies.</p>
-        <a href="read-more.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
+        <a href="about.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
       </div>
     </article>
   </main>
