--- a/about.html
+++ b/about.html
@@ -3,72 +3,68 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>University Research Integrity Poster</title>
+  <title>Evercrest University | Research Integrity Policy</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to bottom right, #e0f2fe, #90cdf4, #3b82f6);
-    }
-  </style>
 </head>
-<body class="text-gray-800 font-sans">
-  <div class="max-w-5xl mx-auto p-10 bg-white shadow-2xl rounded-3xl mt-12 border border-blue-300">
+<body class="bg-white text-gray-800 font-sans">
+  <div class="max-w-5xl mx-auto p-10 bg-white shadow-xl rounded-3xl mt-12 border border-gray-300">
     <div class="text-center mb-10">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Academic_Cap.svg" alt="University Logo" class="h-20 mx-auto mb-6">
-      <h1 class="text-5xl font-bold text-blue-700">Crestmont University</h1>
-      <p class="text-2xl text-blue-600 mt-3 font-medium">Integrity in Research Policy</p>
+      <img src="https://i.pinimg.com/736x/3b/b8/a6/3bb8a6fa517b1693bfcae53419cfcecb.jpg" alt="University Logo" class="h-20 mx-auto mb-6">
+      <h1 class="text-5xl font-bold text-blue-700">Evercrest University</h1>
+      <p class="text-2xl text-black mt-3 font-medium">Integrity in Research Policy</p>
+      <p class="text-2xl text-black mt-3 font-medium">At Evercrest University, we are committed to upholding the highest standards of integrity in all research activities. Every student, faculty member, and researcher shares the responsibility of ensuring that our discoveries are honest, transparent, and ethically sound.</p>
     </div>
 
     <div class="space-y-10">
       
       <!-- Core Values -->
       <section>
-        <h2 class="text-3xl font-semibold text-blue-800 flex items-center mb-3">
-          <i class="fas fa-handshake mr-3 text-blue-600"></i> Our Core Values
+        <h2 class="text-3xl font-semibold text-black flex items-center mb-3">
+          <i class="fas fa-handshake mr-3 text-black"></i> Our Core Values
         </h2>
-        <ul class="list-disc list-inside ml-6 text-blue-700 space-y-1">
-          <li><strong>Honesty:</strong> Report data and methods truthfully.</li>
-          <li><strong>Accountability:</strong> Own your research and its impact.</li>
-          <li><strong>Respect:</strong> Credit the contributions of others.</li>
-          <li><strong>Fairness:</strong> Review and collaborate without bias.</li>
-          <li><strong>Compliance:</strong> Follow institutional and ethical guidelines.</li>
+        <ul class="list-disc list-inside ml-6 text-gray-700 space-y-1">
+          <li><strong>Honesty:</strong> We report data, results, methods, and procedures truthfully.</li>
+          <li><strong>Accountability:</strong> We take full responsibility for the integrity of our research.</li>
+          <li><strong>Respect:</strong> We acknowledge and credit the contributions of others.</li>
+          <li><strong>Fairness:</strong> We engage in peer review objectively and without bias.</li>
+          <li><strong>Compliance:</strong> We adhere to all ethical, legal, and institutional requirements.</li>
         </ul>
       </section>
 
       <!-- Research Violations -->
       <section>
-        <h2 class="text-3xl font-semibold text-blue-800 flex items-center mb-3">
-          <i class="fas fa-exclamation-triangle mr-3 text-blue-600"></i> Research Violations
+        <h2 class="text-3xl font-semibold text-black flex items-center mb-3">
+          <i class="fas fa-exclamation-triangle mr-3 text-blue-600"></i> Research Misconduct Includes
         </h2>
-        <ul class="list-disc list-inside ml-6 text-blue-700 space-y-1">
+        <ul class="list-disc list-inside ml-6 text-gray-700 space-y-1">
           <li><strong>Fabrication:</strong> Making up data or results.</li>
-          <li><strong>Falsification:</strong> Manipulating research materials or processes.</li>
-          <li><strong>Plagiarism:</strong> Using another’s work without proper credit.</li>
-          <li><strong>Misrepresentation:</strong> Distorting research outcomes or credentials.</li>
+          <li><strong>Falsification:</strong> Manipulating research materials, equipment, or processes.</li>
+          <li><strong>Plagiarism:</strong> Using another’s ideas, processes, or results without proper credit.</li>
+          <li><strong>Misrepresentation:</strong> Distorting research achievements, credentials, or funding information.</li>
         </ul>
       </section>
 
       <!-- Commitment -->
       <section>
-        <h2 class="text-3xl font-semibold text-blue-800 flex items-center mb-3">
+        <h2 class="text-3xl font-semibold text-black flex items-center mb-3">
           <i class="fas fa-lightbulb mr-3 text-blue-600"></i> Our Commitment
         </h2>
-        <p class="mt-2 text-blue-700">
-          Crestmont University fosters a culture of ethical research by providing:
+        <p class="mt-2 text-gray-700">
+          At Evercrest University, we promote a culture of ethical research by providing:
         </p>
-        <ul class="list-disc list-inside ml-6 text-blue-700 space-y-1 mt-2">
-          <li>Training & education in responsible conduct of research</li>
-          <li>Fair investigation of reported misconduct</li>
-          <li>Resources for research ethics and integrity</li>
+        <ul class="list-disc list-inside ml-6 text-gray-700 space-y-1 mt-2">
+          <li>Mandatory training in Responsible Conduct of Research (RCR)</li>
+          <li>Transparent and fair procedures for investigating misconduct</li>
+          <li>Resources and mentoring for ethical scholarship</li>
         </ul>
       </section>
     </div>
 
-    <footer class="mt-14 text-center text-sm text-blue-900 border-t border-blue-300 pt-6">
-      <p class="text-base font-semibold mb-2">🔹 Integrity Builds Trust. Trust Powers Discovery. 🔹</p>
-      <p>Visit: <a href="#" class="text-blue-600 underline hover:text-blue-800">www.crestmont.edu/research-integrity</a></p>
-      <p>Contact: <a href="mailto:research.ethics@crestmont.edu" class="text-blue-600 underline hover:text-blue-800">research.ethics@crestmont.edu</a></p>
+    <footer class="mt-14 text-center text-sm text-gray-500 border-t pt-6">
+      <p class="text-base font-semibold text-gray-700 mb-2">🔹 Integrity Builds Trust. Trust Drives Discovery. 🔹</p>
+      <p>Visit: <a href="#" class="text-blue-600 underline hover:text-blue-800">www.evercrestuniversity.edu/research-integrity</a></p>
+      <p>Contact: <a href="mailto:research.ethics@evercrestuniversity.edu" class="text-blue-600 underline hover:text-blue-800">research.ethics@evercrestuniversity.edu</a></p>
     </footer>
   </div>
 </body>
