--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <!-- Research Violations -->
       <section>
         <h2 class="text-3xl font-semibold text-black flex items-center mb-3">
-          <i class="fas fa-exclamation-triangle mr-3 text-blue-600"></i> Research Misconduct Includes
+          <i class="fas fa-exclamation-triangle mr-3 text-black"></i> Research Misconduct Includes
         </h2>
         <ul class="list-disc list-inside ml-6 text-gray-700 space-y-1">
           <li><strong>Fabrication:</strong> Making up data or results.</li>
@@ -48,7 +48,7 @@
       <!-- Commitment -->
       <section>
         <h2 class="text-3xl font-semibold text-black flex items-center mb-3">
-          <i class="fas fa-lightbulb mr-3 text-blue-600"></i> Our Commitment
+          <i class="fas fa-lightbulb mr-3 text-black"></i> Our Commitment
         </h2>
         <p class="mt-2 text-gray-700">
           At Evercrest University, we promote a culture of ethical research by providing:
