--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
     <!-- More blog cards as needed... -->
     <!-- Blog Card -->
     <article class="bg-white shadow-md rounded-lg overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
-      <img src="https://i.pinimg.com/736x/b7/54/c3/b754c3fc8a745821b9a5590fda492d64.jpg" alt="Blog image" class="w-full h-48 object-cover">
+      <img src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fwww.sju.edu%2Fsites%2Fmergersjuedu%2Ffiles%2Fstyles%2F16_9_1200x675%2Fpublic%2Fsju-campus-aerial-hero-2021-3200x1600.jpg&sp=1745902662T148bfa4e4e31cba22fa41b0a07cb50ec70cf8de51cead3273d0f092a02dcafcb" alt="Blog image" class="w-full h-48 object-cover">
       <div class="p-6">
         <h2 class="text-xl font-semibold mb-2 text-indigo-700 transition-colors duration-200 hover:text-indigo-900">University Policies</h2>
         <p class="text-gray-600 mb-4">University's Integrity in Research Policies.</p>
